--- a/index.html
+++ b/index.html
@@ -6,37 +6,53 @@
   <style>
     body {
       font-family: sans-serif;
-      max-width: 700px;
+      max-width: 800px;
       margin: 3em auto;
       padding: 0 1em;
       line-height: 1.6;
-      background: #f9f9f9;
-      color: #333;
+      background-color: #111;
+      color: #f9f9f9;
+      text-align: center;
     }
+
     h1 {
-      text-align: center;
       font-size: 2em;
-      margin-bottom: 0.5em;
+      margin-bottom: 0.3em;
     }
+
     p {
-      text-align: center;
       font-style: italic;
+      color: #ccc;
+      margin-bottom: 2em;
     }
+
     ul {
       list-style: none;
       padding: 0;
+      text-align: left;
+      margin: 0 auto;
+      max-width: 400px;
     }
+
     li {
       margin: 0.8em 0;
       font-size: 1.1em;
     }
+
     a {
-      color: #0066cc;
+      color: #66ccff;
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
     }
+
+    img.logo {
+      max-width: 200px;
+      margin-bottom: 1.5em;
+    }
+
     footer {
       text-align: center;
       font-size: 0.9em;
@@ -46,6 +62,7 @@
   </style>
 </head>
 <body>
+  <img src="senser-logo.png" alt="SENSER Logo" class="logo">
   <h1>South East Economic Monitor</h1>
   <p>Annual reports on the economy of Ireland’s South East region</p>
 
