--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </ul>
 
   <footer>
-    <p>&copy; South East Technological University – Economic Research Group</p>
+    <p>&copy; South East Technological University – South East Network for Social Economic Research</p>
   </footer>
 </body>
 </html>
