--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </style>
 </head>
 <body>
-  <img src="senser-logo.png" alt="SENSER Logo" class="logo">
+  <img src="SENSERlogo.jpg" alt="SENSER Logo" class="logo">
   <h1>South East Economic Monitor</h1>
   <p>Annual reports on the economy of Ireland’s South East region</p>
 
@@ -77,8 +77,14 @@
     <li><a href="SE_Eco_Monitor_2016.pdf">Download the 2016 Monitor</a></li>
   </ul>
 
-  <footer>
-    <p>&copy; South East Technological University – South East Network for Social Economic Research</p>
-  </footer>
+  <footer style="margin-top: 50px; text-align: center; font-size: 0.9em;">
+  <p>&copy; South East Technological University – South East Network for Social Economic Research</p>
+    <p>&copy; John Casey | Dr Ray Griffin | Cormac O'Keeffe | 
+    <a href="https://www.setu.ie/business" target="_blank" style="color: white; text-decoration: underline;">
+      SETU School of Business
+    </a>
+  </p>
+</footer>
+  
 </body>
 </html>
