--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
   <footer style="margin-top: 50px; text-align: center; font-size: 0.9em;">
   <p>&copy; South East Technological University – South East Network for Social Economic Research</p>
-    <p>&copy; John Casey | Dr Ray Griffin | Cormac O'Keeffe | 
+    <p>&copy; John Casey | Ray Griffin | Cormac O'Keeffe | 
     <a href="https://www.setu.ie/business" target="_blank" style="color: white; text-decoration: underline;">
       SETU School of Business
     </a>
@@ -88,3 +88,4 @@
   
 </body>
 </html>
+
